# aws-tests

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  README.md  pyproject.toml  setup.cfg
aws/: __init__.py  api.py  app.py  cli.py  logging.py
deploy/: aws.yml
tests/: conftest.py
tests/fixtures/: __init__.py  app.py  cli.py  config.py
tests/unit_tests/: test_api.py  test_app.py  test_cli.py  test_logging.py
